; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_ra_local/extr_ra_plugin.c_apply_lock_tokens.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_ra_local/extr_ra_plugin.c_apply_lock_tokens.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*, i32*, i32*, i32*)* @apply_lock_tokens to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @apply_lock_tokens(i32* %0, i8* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %18, label %53

18:                                               ; preds = %5
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @svn_fs_get_access(i32** %11, i32* %19)
  %21 = call i32 @SVN_ERR(i32 %20)
  %22 = load i32*, i32** %11, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %24, label %52

24:                                               ; preds = %18
  %25 = load i32*, i32** %10, align 8
  %26 = load i32*, i32** %8, align 8
  %27 = call i32* @apr_hash_first(i32* %25, i32* %26)
  store i32* %27, i32** %12, align 8
  br label %28

28:                                               ; preds = %48, %24
  %29 = load i32*, i32** %12, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %31, label %51

31:                                               ; preds = %28
  %32 = load i32*, i32** %12, align 8
  %33 = call i8* @apr_hash_this_key(i32* %32)
  store i8* %33, i8** %13, align 8
  %34 = load i32*, i32** %12, align 8
  %35 = call i8* @apr_hash_this_val(i32* %34)
  store i8* %35, i8** %14, align 8
  %36 = load i8*, i8** %7, align 8
  %37 = load i8*, i8** %13, align 8
  %38 = load i32*, i32** %9, align 8
  %39 = call i8* @svn_fspath__join(i8* %36, i8* %37, i32* %38)
  store i8* %39, i8** %15, align 8
  %40 = load i32*, i32** %9, align 8
  %41 = load i8*, i8** %14, align 8
  %42 = call i8* @apr_pstrdup(i32* %40, i8* %41)
  store i8* %42, i8** %14, align 8
  %43 = load i32*, i32** %11, align 8
  %44 = load i8*, i8** %15, align 8
  %45 = load i8*, i8** %14, align 8
  %46 = call i32 @svn_fs_access_add_lock_token2(i32* %43, i8* %44, i8* %45)
  %47 = call i32 @SVN_ERR(i32 %46)
  br label %48

48:                                               ; preds = %31
  %49 = load i32*, i32** %12, align 8
  %50 = call i32* @apr_hash_next(i32* %49)
  store i32* %50, i32** %12, align 8
  br label %28

51:                                               ; preds = %28
  br label %52

52:                                               ; preds = %51, %18
  br label %53

53:                                               ; preds = %52, %5
  %54 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %54
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_fs_get_access(i32**, i32*) #1

declare dso_local i32* @apr_hash_first(i32*, i32*) #1

declare dso_local i8* @apr_hash_this_key(i32*) #1

declare dso_local i8* @apr_hash_this_val(i32*) #1

declare dso_local i8* @svn_fspath__join(i8*, i8*, i32*) #1

declare dso_local i8* @apr_pstrdup(i32*, i8*) #1

declare dso_local i32 @svn_fs_access_add_lock_token2(i32*, i8*, i8*) #1

declare dso_local i32* @apr_hash_next(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
